// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tooltip /> should render 1`] = `
<Tooltip__StyledTooltip
  arrow={true}
  position="left"
  size="big"
  title="Tip"
/>
`;

exports[`<Tooltip /> should render with children 1`] = `
<Tooltip__StyledTooltip
  arrow={true}
  position="left"
  size="big"
  title="Tip"
>
  Hello world
</Tooltip__StyledTooltip>
`;

exports[`<Tooltip /> should render without position prop 1`] = `
<Tooltip__StyledTooltip
  arrow={true}
  position="left"
  size="big"
  title="Tip"
/>
`;
